La Mise a joure de projet

--- a/ordex-app/src/app/pages/login/login.component.html
+++ b/ordex-app/src/app/pages/login/login.component.html
@@ -31,5 +31,9 @@
       Don't have an account?
       <a routerLink="/register" class="text-orange-500 font-semibold hover:underline">Register</a>
     </p>
+    <p class="text-center text-gray-600 mt-2">
+      Mot de passe oublié ?
+      <a routerLink="/mdpoublie" class="text-orange-500 font-semibold hover:underline">Réinitialiser le mot de passe</a>
+    </p>
   </div>
 </div>
