La Mise A Jour De Projet

--- a/ordex-app/src/app/pages/verify-code/verify-code.component.html
+++ b/ordex-app/src/app/pages/verify-code/verify-code.component.html
@@ -39,7 +39,7 @@
 
     <p class="text-center text-gray-600 mt-6">
       Vous n'avez pas reçu de code ?
-      <a routerLink="/mdp-oublie" class="text-orange-500 font-semibold hover:underline">Renvoyer un code</a>
+      <button (click)="resendCode()" class="text-orange-500 font-semibold hover:underline">Renvoyer un code</button>
     </p>
   </div>
 </div>
