ajout des nouvelles fonctionnalites

--- a/ordex-app/src/app/pages/register/register.component.html
+++ b/ordex-app/src/app/pages/register/register.component.html
@@ -8,7 +8,7 @@
     <h2 class="text-3xl font-bold text-center text-orange-500 mb-6">Create your Ordex Account</h2>
 
     <!-- Form section -->
-    <form [formGroup]="registerForm" (ngSubmit)="handleRegister()" class="space-y-5">
+    <form [formGroup]="registerForm" (ngSubmit)="handleRegister1()" class="space-y-5">
       <div>
         <label for="username" class="block text-gray-700 font-semibold mb-1">Username</label>
         <input type="text" id="username" formControlName="username"
