--- a/ordex-app/src/app/pages/home/footer/footer.component.html
+++ b/ordex-app/src/app/pages/home/footer/footer.component.html
@@ -17,7 +17,8 @@
         <li><a href="#home" class="hover:text-orange-500">Accueil</a></li>
         <li><a href="#about" class="hover:text-orange-500">À propos</a></li>
         <li><a href="#products" class="hover:text-orange-500">Produits</a></li>
-        <li><a routerLink="/register" class="hover:text-orange-500">S'inscrire</a></li>
+        <li><a href="/login" class="hover:text-orange-500">Se connecter</a></li>
+        <li><a href="/register" class="hover:text-orange-500">S'inscrire</a></li>
       </ul>
     </div>
 
